[package]
name = "Rust"
version = "0.1.0"
authors = ["aptend <aptend@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "^0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
rand = "0.7.2"


[lib]
doctest = false


[[bin]]
name = "Rust"
path = "src/main.rs"
test = false
doctest = false
